<resources>
    <string name="app_name">My Intermediate</string>
    <string name="welcome">Selamat Datang di UseGram</string>
    <string name="description">Ayo jelajahi dunia sosial dan buka peluang untuk bertemu
        dengan orang baru yang menarik! Dapatkan pengalaman yang tak terlupakan dengan terus
        memperbarui feed UseGram-mu untuk menjalin hubungan harmonis dengan komunitas anda.</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Let\'s connect with your community</string>
    <string name="please_provide">Please provide your data first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="nama">Nama</string>
    <string name="name">Input your name</string>
    <string name="add_story">Add Story</string>
    <string name="description_upload">Masukkan deskripsi</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="failed_get_image">Gagal mengambil gambar.</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>


    <!-- Other string resources -->
    <string name="description_uploadd">Description</string>
    <string name="uploadd">Upload</string>
    <string name="location_permission">Allow access to your location:</string>
    <string name="enable_location">Enable Location</string>


</resources>